# feedscraper

./: Cargo.toml  README.md  build.rs
src/: config.rs  lib.rs  main.rs  values.rs
src/routes/: config.rs  feedhome.rs  feedinfo.rs  meta.rs  mod.rs  root.rs  rss.rs
