[package]
name = "feedscraper"
authors = [ "Siriusmart" ]
version = "0.1.0"
edition = "2021"
description = "Automatic web scraper and RSS generator server"
readme = "README.md"
repository = "https://github.com/siriusmart/feedscraper"
license = "AGPL-3.0"
keywords = ["rss", "feed", "scraper", "web", "automatic", "server"]
categories = ["parsing"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.4", features = [ "rustls" ]}
tokio = { version = "1.33", features = [ "rt", "rt-multi-thread", "macros" ]}
scrapyard = "0.1"
dirs = "5.0"
serde = "1.0"
serde_default = "0.1"
rustls = "0.20"
rustls-pemfile = "1.0"
html-escape = "0.2.13"
chrono = "0.4.31"

[features]
